--- a/Gapple/Gapple/Info.plist
+++ b/Gapple/Gapple/Info.plist
@@ -54,7 +54,7 @@
         <string>800E5C92-87D3-429B-8740-5C6183CD13EA</string>
         <string>7C051997-F45A-4523-B053-2D262F94C775</string>
         <string>DAF41AB7-F9AD-4273-9934-C81C74705B69</string>
+        <string>1550C683-EA48-4036-B7CE-FB6F5D13EE02</string>
     </array>
-
 </dict>
 </plist>
